Use jdk11 as build agent